# spdlog

./: CMakeLists.txt
include/spdlog/: logger-inl.h  logger.h
